--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@ __pycache__/pyxel.cpython-36.pyc
 characters/__pycache__/Mosquito.cpython-36.pyc
 characters/__pycache__/Character.cpython-36.pyc
 __pycache__/viewport.cpython-36.pyc
+characters/__pycache__/Human.cpython-36.pyc
