--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@ characters/__pycache__/Mosquito.cpython-36.pyc
 characters/__pycache__/Character.cpython-36.pyc
 __pycache__/viewport.cpython-36.pyc
 characters/__pycache__/Human.cpython-36.pyc
+characters/__pycache__/Water.cpython-36.pyc
